force-app/main/default/objects/Quote/fields/Amount1__c.field-meta.xml
<CustomField>
    <fullName>Amount1__c</fullName>
    <formula>TEXT(Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Text Value</label>
    <type>Text</type>
</CustomField>