force-app/main/default/objects/Quote/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Estimated annual sales in USD for the products being quoted</description>
    <inlineHelpText>Estimated annual sales in USD for the products being quoted</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>