force-app/main/default/objects/Quote/fields/AmountTV__c.field-meta.xml
<CustomField>
    <fullName>AmountTV__c</fullName>
    <formula>TEXT(TotalPrice)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AmountTV</label>
    <type>Text</type>
</CustomField>