force-app/main/default/objects/Quote/fields/Annualized_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Sales__c</fullName>
    <formula>TEXT(Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Sales</label>
    <type>Text</type>
</CustomField>