force-app/main/default/objects/Quote/fields/Capex_Description__c.field-meta.xml
<CustomField>
    <fullName>Capex_Description__c</fullName>
    <label>Capex Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>