force-app/main/default/objects/Quote/fields/Commentary__c.field-meta.xml
<CustomField>
    <fullName>Commentary__c</fullName>
    <label>Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>