force-app/main/default/objects/Quote/fields/CustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomerEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>