force-app/main/default/objects/Quote/fields/Does_this_quote_require_Capex__c.field-meta.xml
<CustomField>
    <fullName>Does_this_quote_require_Capex__c</fullName>
    <label>Does this quote require Capex?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>