force-app/main/default/objects/Quote/fields/Est_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>Est_EBITDA__c</fullName>
    <label>Est. EBITDA %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>