force-app/main/default/objects/Quote/fields/Estimated_Capex_USD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Capex_USD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Estimated Capex (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>