force-app/main/default/objects/Quote/fields/Pricing_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>