force-app/main/default/objects/Quote/fields/PricingAnalystEmail__c.field-meta.xml
<CustomField>
    <fullName>PricingAnalystEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>