force-app/main/default/objects/Quote/fields/PricingAnalystPhone__c.field-meta.xml
<CustomField>
    <fullName>PricingAnalystPhone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>