force-app/main/default/objects/Quote/fields/Quote_Activity_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Activity_Start_Date__c</fullName>
    <description>This is the date that the Pricing Analyst received the RFQ Request</description>
    <inlineHelpText>This is the date that the Pricing Analyst received the RFQ Request</inlineHelpText>
    <label>Quote Activity Start Date</label>
    <type>Date</type>
</CustomField>