force-app/main/default/objects/Quote/fields/Quote_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Quote_Commentary__c</fullName>
    <label>Quote Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>