force-app/main/default/objects/Quote/fields/SalesRepEmail__c.field-meta.xml
<CustomField>
    <fullName>SalesRepEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>