force-app/main/default/objects/Quote/fields/SalesRepPhone__c.field-meta.xml
<CustomField>
    <fullName>SalesRepPhone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>