force-app/main/default/objects/Quote/recordTypes/Filtration.recordType-meta.xml
<RecordType>
    <fullName>Filtration</fullName>
    <active>true</active>
    <label>Filtration</label>
</RecordType>